# Exif_lat_lon

./: .gitattributes  .gitignore  CHANGELOG.md  ExtractGPS.py  README.md  ROADMAP.md  Readme.md  pyproject.toml  start.py
TEMP/: Readme.md
docs/: architecture.md
sample_data/: README.md
src/exif_lat_lon/: __init__.py  cli.py  core.py  gui.py
tests/: test_gps_conversion.py
