[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "exif-lat-lon"
version = "0.1.0"
description = "Extract GPS coordinates from image EXIF metadata and export CSV/GeoJSON."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jakub Pelka" }
]
dependencies = [
  "Pillow>=10.0",
  "pillow-heif>=0.16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
exif-lat-lon = "exif_lat_lon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]
